--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
+    },
+    "testTimeout": 20000
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
@@ -63,11 +64,11 @@
     "@uktrade/wdio-image-diff-js": "^1.8.0",
     "@wdio/browserstack-service": "^6.12.1",
     "@wdio/cli": "^6.12.1",
-    "@wdio/local-runner": "^7.0.0",
+    "@wdio/local-runner": "^6.12.1",
     "@wdio/mocha-framework": "^7.9.0",
-    "@wdio/selenium-standalone-service": "^5.16.10",
-    "@wdio/spec-reporter": "^7.3.1",
-    "@wdio/sync": "^7.7.7",
+    "@wdio/selenium-standalone-service": "^6.12.1",
+    "@wdio/spec-reporter": "^6.11.0",
+    "@wdio/sync": "^6.11.0",
     "browser-sync": "2.27.5",
     "browser-sync-webpack-plugin": "^2.2.2",
     "browserstack-local": "^1.4.8",
@@ -83,16 +84,14 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "^4.2.0",
-    "jasmine": "3.0.0",
-    "jasmine-core": "2.99.1",
-    "jest": "^23.6.0",
-    "jest-codemods": "^0.20.0",
-    "mocha": "^5.2.0",
+    "jest": "^27.1.0",
+    "jest-codemods": "^0.24.0",
+    "mocha": "^9.1.1",
     "mocha-circleci-reporter": "0.0.3",
-    "mocha-multi": "^1.0.1",
+    "mocha-multi": "^1.1.3",
     "mocha-webpack": "^1.1.0",
     "mockdate": "2.0.2",
-    "nock": "^13.1.1",
+    "nock": "^13.1.3",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
@@ -102,15 +101,17 @@
     "sass-lint": "^1.12.1",
     "sass-loader": "^10.0.4",
     "style-loader": "^0.21.0",
-    "supertest": "^3.3.0",
+    "supertest": "^6.1.6",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/helper-call-delegate": "^7.12.13",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.4.3",
     "array-from": "^2.1.1",
     "autoprefixer": "^9.8.6",
@@ -160,7 +161,7 @@
   },
   "sasslintConfig": ".sass-lint.yml",
   "resolutions": {
-    "tar": "^4.4.15",
+    "tar": "^6.1.11",
     "fstream": ">=1.0.12",
     "js-yaml": "^3.13.1",
     "mem": ">=4.0.0",
