--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^4.2.0",
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
     "jest": "^23.6.0",
-    "jest-codemods": "^0.20.0",
+    "jest-codemods": "^0.24.0",
     "mocha": "^5.2.0",
     "mocha-circleci-reporter": "0.0.3",
     "mocha-multi": "^1.0.1",
@@ -113,7 +113,7 @@
     "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.4.3",
     "array-from": "^2.1.1",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.3.4",
     "axios": ">=0.21.1",
     "babel-loader": "^8.2.2",
     "compression": "1.7.2",
@@ -140,6 +140,7 @@
     "morgan": ">=1.10.0",
     "nunjucks": "^3.2.3",
     "pluralise": "^1.0.1",
+    "postcss": "^7.0.36",
     "postcss-loader": "^4.1.0",
     "qs": "^6.10.1",
     "raven": "^2.6.4",
