--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
-    "testRunner": "jest-jasmine2"
+    "testRunner": "jest-jasmine2",
+    "testEnvironment": "jsdom"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
