--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "is-svg": "4.2.2",
     "merge": ">=2.1.1",
     "serialize-javascript": ">=3.1.0",
-    "trim-newlines": "^3.0.1",
+    "trim-newlines": "3.0.1",
     "ssri": ">=6.0.2",
     "y18n": "4.0.1",
     "ini": "1.3.6"
