--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "trim-newlines": "3.0.1",
     "ssri": ">=6.0.2",
     "y18n": "4.0.1",
-    "ini": "1.3.6"
+    "ini": "1.3.6",
+    "set-value": "4.0.1"
   }
 }
