--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "hawk": "7.0.7",
     "history": "^4.10.1",
     "html5shiv": "^3.7.3",
-    "image-webpack-loader": "^5.0.1",
+    "image-webpack-loader": "^7.0.1",
     "istanbul-api": "^2.1.6",
     "js-yaml": "^3.13.1",
     "lodash": ">=4.17.21",
@@ -175,6 +175,9 @@
     "ssri": ">=6.0.2",
     "y18n": "4.0.1",
     "ini": "1.3.6",
-    "set-value": "4.0.1"
+    "set-value": "4.0.1",
+    "nth-check": "2.0.1",
+    "ansi-regex": "6.0.1",
+    "semver-regex": "3.1.3"
   }
 }
