--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.4.3",
+    "ansi-regex": "^6.0.1",
     "array-from": "^2.1.1",
     "autoprefixer": "^10.3.4",
     "axios": ">=0.21.2",
@@ -154,6 +155,7 @@
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.37.5",
     "sass-loader": "^10.0.4",
+    "strip-ansi": "^7.0.1",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
     "webpack": "^4.46.0",
@@ -178,6 +180,7 @@
     "set-value": "4.0.1",
     "nth-check": "2.0.1",
     "ansi-regex": "6.0.1",
-    "semver-regex": "3.1.3"
+    "semver-regex": "3.1.3",
+    "jsonpointer": ">=5.0.0"
   }
 }
