--- a/package.json
+++ b/package.json
@@ -114,7 +114,6 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.4.3",
-    "ansi-regex": "^6.0.1",
     "array-from": "^2.1.1",
     "autoprefixer": "^10.3.4",
     "axios": ">=0.21.2",
@@ -129,6 +128,7 @@
     "es6-promise": "^4.2.5",
     "express": "^4.16.2",
     "express-session": "1.17.2",
+    "gauge": "^4.0.0",
     "get-form-data": "^3.0.0",
     "govuk-frontend": "^2.11.0",
     "govuk-react": "^0.7.0",
@@ -155,6 +155,7 @@
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.37.5",
     "sass-loader": "^10.0.4",
+    "string-width": "^5.0.1",
     "strip-ansi": "^7.0.1",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
@@ -179,7 +180,6 @@
     "ini": "1.3.6",
     "set-value": "4.0.1",
     "nth-check": "2.0.1",
-    "ansi-regex": "6.0.1",
     "semver-regex": "3.1.3",
     "jsonpointer": ">=5.0.0"
   }
