--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "set-value": "4.0.1",
     "nth-check": "2.0.1",
     "semver-regex": "3.1.3",
-    "jsonpointer": ">=5.0.0"
+    "jsonpointer": ">=5.0.0",
+    "json-schema": ">=0.4.0"
   }
 }
